first part of level 6