@@ -21,7 +21,7 @@ public class Triangle extends Polygon {
     }
 
     @Override
-    public List<Point> findIntersections(Ray ray) {
+    public List<GeoPoint> findGeoIntersectionsHelper(Ray ray) {
         List<Point> intersections = plane.findIntersections(ray);
         if (intersections == null)
             return null;
@@ -37,26 +37,6 @@ public class Triangle extends Polygon {
         if (!(rDir.dotProduct(n0) > 0 && rDir.dotProduct(n1) > 0 && rDir.dotProduct(n2) > 0) &&
                 !(rDir.dotProduct(n0) < 0 && rDir.dotProduct(n1) < 0 && rDir.dotProduct(n2) < 0))
             return null;
-        return intersections;
-    }
-
-    @Override
-    public List<GeoPoint> findGeoIntersectionsHelper(Ray ray) {
-        List<GeoPoint> intersections = plane.findIntersections(ray).stream().map(point -> new GeoPoint(this, point)).collect(Collectors.toList());
-        if (intersections.isEmpty())
-            return null;
-        Point P0 = ray.getHead();
-        Vector rDir = ray.getDir();
-        Vector V0 = vertices.get(0).subtract(P0);
-
-        Vector V1 = vertices.get(1).subtract(P0);
-        Vector V2 = vertices.get(2).subtract(P0);
-        Vector n0 = V0.crossProduct(V1).normalize();
-        Vector n1 = V1.crossProduct(V2).normalize();
-        Vector n2 = V2.crossProduct(V0).normalize();
-        if (!(rDir.dotProduct(n0) > 0 && rDir.dotProduct(n1) > 0 && rDir.dotProduct(n2) > 0) &&
-                !(rDir.dotProduct(n0) < 0 && rDir.dotProduct(n1) < 0 && rDir.dotProduct(n2) < 0))
-            return null;
-        return intersections;
+        return List.of(new GeoPoint(this, intersections.getFirst()));
     }
 }
